--- a/index5.html
+++ b/index5.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Войти</title>
     <link rel="stylesheet" href="./style4.css">
 </head>
 <body>
     <div class="wrapper">
+        <div class="header_bg">
+
+        </div>
         <div class="main">
             <header>
                 <div class="header">
