--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <div class="wrapper">
       <div class="main">
-        <header>
-          <div class="header">
-            <div class="logo_header">
+        <head>
+          <div class="head">
+            <div class="logo_head">
               <div class="logo">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -57,7 +57,7 @@
               <div><a href="./index5.html">Войти</a></div>
             </div>
           </div>
-        </header>
+        </head>
         <section>
           <div class="section">
             <div class="foto">
