--- a/index3.html
+++ b/index3.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Истории</title>
-    <link rel="stylesheet" href="./style3.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style3.css" />
+  </head>
+  <body>
     <div class="wrapper">
-        <div class="main">
-            <header>
-                <div class="header">
-                    <div class="menu">
-                        <div><a href="./index.html">Главная</a></div>
-                        <div><a href="./index2.html">Путеводитель</a></div>
-                        <div><a href="./index4.html">Подборка</a></div>
-                        <div><a href="./index5.html">Войти</a></div>
-                    </div>
-                </div>
-            </header>
-            <section>
-                <div class="section"></div>
-            </section>
-        </div>
+      <div class="head_bg"></div>
+      <div class="main">
+        <head>
+          <div class="head">
+            <div class="menu">
+              <div><a href="./index.html">Главная</a></div>
+              <div><a href="./index2.html">Путеводитель</a></div>
+              <div><a href="./index4.html">Подборка</a></div>
+              <div><a href="./index5.html">Войти</a></div>
+            </div>
+          </div>
+        </head>
+        <section>
+          <div class="section">
+            <div class="header">Истории</div>
+            <div class="header_ps">Советы, истории и репортажи от первого лица</div>
+            <div class="section_block">
+                <div class="header">text</div>
+                <div class="picture"></div>
+                <div class="text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+                <div class="btn">Далее</div>
+            </div>
+          </div>
+        </section>
+      </div>
     </div>
-</body>
+  </body>
 </html>
