--- a/index4.html
+++ b/index4.html
@@ -12,8 +12,8 @@
 <body>
     <div class="wrapper">
         <div class="main">
-            <header>
-                <div class="header">
+            <head>
+                <div class="head">
                     <div class="menu">
                         <div><a href="./index.html">Главная</a></div>
                         <div><a href="./index2.html">Путеводитель</a></div>
@@ -21,7 +21,7 @@
                         <div><a href="./index5.html">Войти</a></div>
                     </div>
                 </div>
-            </header>
+            </head>
             <section>
                 <div class="section"></div>
             </section>
