--- a/index5.html
+++ b/index5.html
@@ -11,12 +11,9 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header_bg">
-
-        </div>
         <div class="main">
-            <header>
-                <div class="header">
+            <head>
+                <div class="head">
                     <div class="menu">
                         <div><a href="./index.html">Главная</a></div>
                         <div><a href="./index2.html">Путеводитель</a></div>
@@ -24,7 +21,7 @@
                         <div><a href="./index4.html">Подборка</a></div>
                     </div>
                 </div>
-            </header>
+            </head>
             <section>
                 <div class="section"></div>
             </section>
