--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="wrapper">
+      <div class="head_bg"></div>
       <div class="main">
         <head>
           <div class="head">
@@ -51,7 +52,6 @@
               <div class="logo_name">Название</div>
             </div>
             <div class="menu">
-              <div><a href="./index2.html">Путеводитель</a></div>
               <div><a href="./index3.html">Истории</a></div>
               <div><a href="./index4.html">Подборка</a></div>
               <div><a href="./index5.html">Войти</a></div>
