--- a/index4.html
+++ b/index4.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="head_bg"></div>
         <div class="main">
             <head>
                 <div class="head">
                     <div class="menu">
                         <div><a href="./index.html">Главная</a></div>
-                        <div><a href="./index2.html">Путеводитель</a></div>
                         <div><a href="./index3.html">Истории</a></div>
                         <div><a href="./index5.html">Войти</a></div>
                     </div>
