--- a/index3.html
+++ b/index3.html
@@ -20,7 +20,6 @@
           <div class="head">
             <div class="menu">
               <div><a href="./index.html">Главная</a></div>
-              <div><a href="./index2.html">Путеводитель</a></div>
               <div><a href="./index4.html">Подборка</a></div>
               <div><a href="./index5.html">Войти</a></div>
             </div>
@@ -38,8 +37,6 @@
             </div>
           </div>
           <div class="section">
-            <div class="header">Истории</div>
-            <div class="header_ps">Советы, истории и репортажи от первого лица</div>
             <div class="section_block">
                 <div class="header">text</div>
                 <div class="picture"></div>
@@ -48,8 +45,6 @@
             </div>
           </div>
           <div class="section">
-            <div class="header">Истории</div>
-            <div class="header_ps">Советы, истории и репортажи от первого лица</div>
             <div class="section_block">
                 <div class="header">text</div>
                 <div class="picture"></div>
@@ -59,15 +54,25 @@
           </div>
         </section>
         <footer>
-          <div class="">
-            <div class="">
-              <div class=""></div>
-              <div class=""></div>
+          <div class="color g">
+            <div class="footer_block">
+              <div class="text_footer">Есть о чем рассказать?</div>
+              <div class="text_footer_ps">Напишите на нашу почту blog@poedem.ru</div>
             </div>
           </div>
-          <div>
-            <div></div>
-            <div></div>
+          <div class="color b">
+            <div class="footer_label">
+             <div>
+              <svg xmlns="http://www.w3.org/2000/svg" width="56" height="64" viewBox="0 0 56 64" fill="none">
+                <path d="M5.7915 29.177L29.6008 37.1329V42.4368V45.4203H29.279L28.6355 47.7407L5.7915 29.177Z" fill="#F5800D"/>
+                <path d="M5.7915 29.177L29.6008 37.1329V42.4368V45.4203H29.279L28.6355 47.7407L5.7915 29.177Z" fill="#F5800D"/>
+                <path d="M53.41 28.8455L29.279 36.8013L28.6355 47.7407L53.41 28.8455Z" fill="#047E79"/>
+                <path d="M53.41 28.8455L29.279 36.8013L28.6355 47.7407L53.41 28.8455Z" fill="#047E79"/>
+                <path d="M5.95621 29.0705L29.488 28.947L53.0198 28.8235M5.95621 29.0705L28.4467 47.9257M5.95621 29.0705L29.0431 37.0557M53.0198 28.8235L28.4467 47.9257M53.0198 28.8235L29.0431 37.0557M53.0198 28.8235L15.4652 29.0206L3.28834 1.00013L4.19468 61.1743C7.03607 61.0741 39.6876 60.5624 52.8521 61.4398L28.4467 47.9257M28.4467 47.9257L29.0431 37.0557" stroke="black"/>
+              </svg>
+             </div>
+              <div>bSBDN</div>
+            </div>
             <div class="icons">
               <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 35 35" fill="none">
                 <circle cx="17.5" cy="17.5" r="17.5" fill="#07AEE2"/>
@@ -105,3 +110,4 @@
     </div>
   </body>
 </html>
+l
