--- a/index4.html
+++ b/index4.html
@@ -25,6 +25,159 @@
             <section>
                 <div class="section"></div>
             </section>
+            <footer>
+                <div class="color g">
+                  <div class="footer_block">
+                    <div class="text_footer">Есть о чем рассказать?</div>
+                    <div class="text_footer_ps">
+                      Напишите на нашу почту blog@poedem.ru
+                    </div>
+                  </div>
+                </div>
+                <div class="color b">
+                  <div class="footer_label">
+                    <div>
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="56"
+                        height="64"
+                        viewBox="0 0 56 64"
+                        fill="none"
+                      >
+                        <path
+                          d="M5.7915 29.177L29.6008 37.1329V42.4368V45.4203H29.279L28.6355 47.7407L5.7915 29.177Z"
+                          fill="#F5800D"
+                        />
+                        <path
+                          d="M5.7915 29.177L29.6008 37.1329V42.4368V45.4203H29.279L28.6355 47.7407L5.7915 29.177Z"
+                          fill="#F5800D"
+                        />
+                        <path
+                          d="M53.41 28.8455L29.279 36.8013L28.6355 47.7407L53.41 28.8455Z"
+                          fill="#047E79"
+                        />
+                        <path
+                          d="M53.41 28.8455L29.279 36.8013L28.6355 47.7407L53.41 28.8455Z"
+                          fill="#047E79"
+                        />
+                        <path
+                          d="M5.95621 29.0705L29.488 28.947L53.0198 28.8235M5.95621 29.0705L28.4467 47.9257M5.95621 29.0705L29.0431 37.0557M53.0198 28.8235L28.4467 47.9257M53.0198 28.8235L29.0431 37.0557M53.0198 28.8235L15.4652 29.0206L3.28834 1.00013L4.19468 61.1743C7.03607 61.0741 39.6876 60.5624 52.8521 61.4398L28.4467 47.9257M28.4467 47.9257L29.0431 37.0557"
+                          stroke="black"
+                        />
+                      </svg>
+                    </div>
+                    <div>bSBDN</div>
+                  </div>
+                  <div class="icons">
+                    <div class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="35"
+                        height="35"
+                        viewBox="0 0 35 35"
+                        fill="none"
+                      >
+                        <circle cx="17.5" cy="17.5" r="17.5" fill="#07AEE2" />
+                        <path
+                          fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M13.4182 20.321L19.9036 24.9626C20.6437 25.3581 21.1778 25.1533 21.3622 24.297L24.0021 12.246C24.2724 11.1963 23.589 10.7202 22.881 11.0316L7.37959 16.8218C6.32147 17.233 6.32764 17.8048 7.18672 18.0596L11.1647 19.2624L20.3743 13.634C20.809 13.3786 21.2081 13.5159 20.8806 13.7975"
+                          fill="white"
+                        />
+                      </svg>
+                    </div>
+                    <div class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="35"
+                        height="35"
+                        viewBox="0 0 35 35"
+                        fill="none"
+                      >
+                        <circle
+                          cx="17.5"
+                          cy="17.5"
+                          r="17.5"
+                          fill="url(#paint0_radial_43_235)"
+                        />
+                        <path
+                          fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M17.5008 8.75C15.1244 8.75 14.8262 8.76039 13.8929 8.80287C12.9613 8.84552 12.3255 8.993 11.7691 9.20938C11.1936 9.43287 10.7055 9.73183 10.2191 10.2184C9.73238 10.7047 9.43342 11.1929 9.2092 11.7682C8.99227 12.3248 8.84461 12.9608 8.80268 13.892C8.76094 14.8253 8.75 15.1237 8.75 17.5001C8.75 19.8765 8.76057 20.1738 8.80287 21.1071C8.8457 22.0387 8.99318 22.6745 9.20938 23.2309C9.43305 23.8064 9.73202 24.2945 10.2186 24.7809C10.7047 25.2676 11.1929 25.5673 11.7681 25.7908C12.3248 26.0072 12.9608 26.1547 13.8921 26.1973C14.8255 26.2398 15.1235 26.2502 17.4997 26.2502C19.8763 26.2502 20.1736 26.2398 21.107 26.1973C22.0385 26.1547 22.675 26.0072 23.2318 25.7908C23.8071 25.5673 24.2945 25.2676 24.7807 24.7809C25.2674 24.2945 25.5664 23.8064 25.7906 23.231C26.0057 22.6745 26.1534 22.0385 26.1971 21.1073C26.2391 20.174 26.25 19.8765 26.25 17.5001C26.25 15.1237 26.2391 14.8255 26.1971 13.8921C26.1534 12.9606 26.0057 12.3248 25.7906 11.7684C25.5664 11.1929 25.2674 10.7047 24.7807 10.2184C24.294 9.73165 23.8073 9.43269 23.2312 9.20938C22.6734 8.993 22.0372 8.84552 21.1057 8.80287C20.1723 8.76039 19.8752 8.75 17.4981 8.75H17.5008ZM16.7159 10.3266C16.9489 10.3263 17.2088 10.3266 17.5009 10.3266C19.8372 10.3266 20.1141 10.335 21.0366 10.377C21.8898 10.416 22.3528 10.5585 22.6612 10.6783C23.0696 10.8369 23.3607 11.0265 23.6668 11.3327C23.973 11.639 24.1626 11.9306 24.3216 12.339C24.4413 12.6471 24.5841 13.1101 24.6229 13.9632C24.6648 14.8856 24.6739 15.1627 24.6739 17.4979C24.6739 19.8331 24.6648 20.1102 24.6229 21.0326C24.5839 21.8857 24.4413 22.3487 24.3216 22.6568C24.163 23.0651 23.973 23.3559 23.6668 23.662C23.3605 23.9682 23.0698 24.1578 22.6612 24.3164C22.3532 24.4367 21.8898 24.5789 21.0366 24.6179C20.1142 24.6598 19.8372 24.669 17.5009 24.669C15.1644 24.669 14.8875 24.6598 13.9651 24.6179C13.112 24.5785 12.6489 24.436 12.3403 24.3162C11.932 24.1576 11.6403 23.968 11.3341 23.6618C11.0278 23.3555 10.8382 23.0646 10.6793 22.6561C10.5595 22.348 10.4168 21.885 10.3779 21.0318C10.336 20.1094 10.3276 19.8323 10.3276 17.4957C10.3276 15.1591 10.336 14.8834 10.3779 13.961C10.4169 13.1079 10.5595 12.6449 10.6793 12.3364C10.8379 11.9281 11.0278 11.6364 11.3341 11.3302C11.6403 11.0239 11.932 10.8343 12.3403 10.6754C12.6488 10.5551 13.112 10.4129 13.9651 10.3737C14.7723 10.3372 15.0851 10.3263 16.7159 10.3245V10.3266ZM22.1716 11.7795C21.5919 11.7795 21.1216 12.2493 21.1216 12.8292C21.1216 13.4089 21.5919 13.8792 22.1716 13.8792C22.7513 13.8792 23.2216 13.4089 23.2216 12.8292C23.2216 12.2495 22.7513 11.7791 22.1716 11.7791V11.7795ZM17.5008 13.0064C15.0192 13.0064 13.0072 15.0184 13.0072 17.5C13.0072 19.9815 15.0192 21.9926 17.5008 21.9926C19.9823 21.9926 21.9936 19.9815 21.9936 17.5C21.9936 15.0184 19.9822 13.0064 17.5006 13.0064H17.5008ZM17.5009 14.5831C19.1116 14.5831 20.4176 15.8889 20.4176 17.4998C20.4176 19.1106 19.1116 20.4165 17.5009 20.4165C15.8899 20.4165 14.5842 19.1106 14.5842 17.4998C14.5842 15.8889 15.8899 14.5831 17.5009 14.5831Z"
+                          fill="white"
+                        />
+                        <defs>
+                          <radialGradient
+                            id="paint0_radial_43_235"
+                            cx="0"
+                            cy="0"
+                            r="1"
+                            gradientUnits="userSpaceOnUse"
+                            gradientTransform="translate(9.72222 -2.33333) rotate(75.9638) scale(38.4823 96.5246)"
+                          >
+                            <stop stop-color="#6E53CF" />
+                            <stop offset="0.153827" stop-color="#BF23CB" />
+                            <stop offset="0.429125" stop-color="#EB4256" />
+                            <stop offset="0.723363" stop-color="#F68531" />
+                            <stop offset="1" stop-color="#FED06E" />
+                          </radialGradient>
+                        </defs>
+                      </svg>
+                    </div>
+                    <div class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="35"
+                        height="35"
+                        viewBox="0 0 35 35"
+                        fill="none"
+                      >
+                        <circle cx="17.5" cy="17.5" r="17.5" fill="#2582D8" />
+                        <path
+                          fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M17.865 22.9276C17.865 22.9276 18.2006 22.893 18.3724 22.7217C18.5298 22.5647 18.5243 22.2685 18.5243 22.2685C18.5243 22.2685 18.5034 20.8853 19.1955 20.6811C19.8775 20.4802 20.7533 22.0187 21.6827 22.6103C22.3848 23.0576 22.9177 22.9597 22.9177 22.9597L25.4014 22.9276C25.4014 22.9276 26.7 22.8533 26.0843 21.9056C26.0334 21.828 25.7251 21.2043 24.2382 19.9232C22.6804 18.5822 22.8895 18.7991 24.7648 16.4792C25.907 15.0664 26.3635 14.204 26.2208 13.8352C26.0852 13.4824 25.2449 13.5761 25.2449 13.5761L22.4494 13.5921C22.4494 13.5921 22.242 13.566 22.0883 13.6512C21.9383 13.7347 21.841 13.9297 21.841 13.9297C21.841 13.9297 21.399 15.0226 20.8088 15.9526C19.5638 17.9139 19.0663 18.0177 18.8626 17.8961C18.3888 17.6117 18.507 16.7551 18.507 16.1467C18.507 14.2453 18.8181 13.4529 17.9023 13.2478C17.5985 13.1794 17.3748 13.1347 16.5973 13.1271C15.5996 13.1178 14.7557 13.1305 14.2773 13.3474C13.959 13.4917 13.7135 13.8141 13.8635 13.8326C14.0482 13.8554 14.4665 13.9373 14.6884 14.2175C14.9749 14.5795 14.9648 15.3914 14.9648 15.3914C14.9648 15.3914 15.1295 17.6294 14.5802 17.9071C14.2037 18.0978 13.6871 17.7088 12.5767 15.9289C12.0083 15.0175 11.5791 14.0099 11.5791 14.0099C11.5791 14.0099 11.4963 13.8217 11.3481 13.7204C11.1689 13.598 10.9188 13.56 10.9188 13.56L8.26241 13.5761C8.26241 13.5761 7.86318 13.5862 7.71676 13.7474C7.58671 13.89 7.70676 14.1862 7.70676 14.1862C7.70676 14.1862 9.7866 18.7021 12.142 20.9781C14.3019 23.0643 16.7537 22.9276 16.7537 22.9276H17.865Z"
+                          fill="white"
+                        />
+                      </svg>
+                    </div>
+                    <div class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="35"
+                        height="35"
+                        viewBox="0 0 35 35"
+                        fill="none"
+                      >
+                        <circle cx="17.5" cy="17.5" r="17.5" fill="#456FDA" />
+                        <path
+                          fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M18.9434 26.25V17.499H21.532L21.875 14.4833H18.9434L18.9478 12.974C18.9478 12.1874 19.0278 11.766 20.2384 11.766H21.8567V8.75H19.2677C16.158 8.75 15.0634 10.2129 15.0634 12.6731V14.4837H13.125V17.4993H15.0634V26.25H18.9434Z"
+                          fill="white"
+                        />
+                      </svg>
+                    </div>
+                    <div class="icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="35"
+                        height="35"
+                        viewBox="0 0 35 35"
+                        fill="none"
+                      >
+                        <circle cx="17.5" cy="17.5" r="17.5" fill="#17CB3E" />
+                        <path
+                          fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M17.4946 25.0059H17.491C16.0397 25.0054 14.6136 24.6412 13.347 23.9504L8.75 25.1562L9.98023 20.6627C9.22137 19.3475 8.82205 17.8558 8.8227 16.3274C8.82461 11.5462 12.7147 7.65625 17.4945 7.65625C19.8143 7.65725 21.9916 8.56033 23.6288 10.1995C25.266 11.8385 26.1672 14.0172 26.1662 16.3342C26.1643 21.1144 22.2757 25.0039 17.4946 25.0059ZM13.5599 22.3805L13.8231 22.5367C14.9297 23.1934 16.1983 23.5409 17.4916 23.5414H17.4945C21.4671 23.5414 24.7004 20.308 24.702 16.3337C24.7028 14.4079 23.9538 12.597 22.593 11.2346C21.2322 9.87224 19.4225 9.12159 17.4974 9.12092C13.5217 9.12092 10.2884 12.354 10.2868 16.3279C10.2862 17.6898 10.6673 19.0161 11.3888 20.1637L11.5601 20.4364L10.832 23.0961L13.5599 22.3805ZM21.8633 18.3963C21.8091 18.3059 21.6647 18.2517 21.448 18.1432C21.2314 18.0348 20.1661 17.5106 19.9674 17.4383C19.7689 17.366 19.6243 17.3299 19.4799 17.5467C19.3355 17.7636 18.9203 18.2517 18.7939 18.3963C18.6675 18.5409 18.541 18.559 18.3245 18.4505C18.1078 18.3421 17.4096 18.1133 16.582 17.3751C15.9378 16.8005 15.503 16.091 15.3766 15.8741C15.2502 15.6571 15.3631 15.5399 15.4716 15.4319C15.5691 15.3348 15.6883 15.1787 15.7966 15.0522C15.9049 14.9258 15.941 14.8353 16.0133 14.6908C16.0855 14.5461 16.0494 14.4197 15.9952 14.3112C15.941 14.2027 15.5077 13.1362 15.3272 12.7023C15.1513 12.2798 14.9726 12.3371 14.8396 12.3304C14.7134 12.3241 14.5688 12.3227 14.4244 12.3227C14.2799 12.3227 14.0452 12.377 13.8466 12.5939C13.648 12.8108 13.0882 13.335 13.0882 14.4015C13.0882 15.468 13.8646 16.4983 13.973 16.6429C14.0813 16.7876 15.5008 18.9761 17.6744 19.9146C18.1914 20.1379 18.5949 20.2712 18.9097 20.3711C19.4287 20.536 19.9011 20.5127 20.2744 20.4569C20.6907 20.3947 21.5563 19.9328 21.737 19.4267C21.9174 18.9205 21.9174 18.4866 21.8633 18.3963Z"
+                          fill="white"
+                        />
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </footer>
         </div>
     </div>
 </body>
