--- a/index5.html
+++ b/index5.html
@@ -1,31 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Войти</title>
-    <link rel="stylesheet" href="./style4.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style5.css" />
+  </head>
+  <body>
     <div class="wrapper">
-        <div class="head_bg"></div>
-        <div class="main">
-            <head>
-                <div class="head">
-                    <div class="menu">
-                        <div><a href="./index.html">Главная</a></div>
-                        <div><a href="./index3.html">Истории</a></div>
-                        <div><a href="./index4.html">Подборка</a></div>
-                    </div>
-                </div>
-            </head>
-            <section>
-                <div class="section"></div>
-            </section>
-        </div>
+      <div class="head_bg"></div>
+      <div class="main">
+        <head>
+          <div class="head">
+            <div class="menu">
+              <div><a href="./index.html">Главная</a></div>
+              <div><a href="./index3.html">Истории</a></div>
+              <div><a href="./index4.html">Подборка</a></div>
+            </div>
+          </div>
+        </head>
+        <section>
+          <div class="section">
+            <div class="avatar"></div>
+            <div>
+              <div class="name">Имя Фамилия</div>
+              <div class="name_user">@ник</div>
+            </div>
+            <div class="info_user">
+              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum."
+              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum."
+            </div>
+            <div class="line"></div>
+            <div>
+              <div><textarea name="" id="" cols="30" rows="10"></textarea></div>
+              <div><textarea name="" id="" cols="30" rows="10"></textarea></div>
+            </div>
+          </div>
+          <div id="disqus_thread"></div>
+          <script>
+            /**
+             *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+             *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+            (function () {
+              // DON'T EDIT BELOW THIS LINE
+              var d = document,
+                s = d.createElement("script");
+              s.src = "https://biba-boba.disqus.com/embed.js";
+              s.setAttribute("data-timestamp", +new Date());
+              (d.head || d.body).appendChild(s);
+            })();
+          </script>
+          <noscript
+            >Please enable JavaScript to view the
+            <a href="https://disqus.com/?ref_noscript"
+              >comments powered by Disqus.</a
+            ></noscript
+          >
+        </section>
+      </div>
     </div>
-</body>
+    <script id="dsq-count-scr" src="//biba-boba.disqus.com/count.js" async></script>
+  </body>
 </html>
