--- a/html/index3.html
+++ b/html/index3.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <title>Истории</title>
-    <link rel="stylesheet" href="./style3.css" />
+    <link rel="stylesheet" href="../style/style3.css" />
   </head>
   <body>
     <div class="wrapper">
