--- a/html/index5.html
+++ b/html/index5.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <title>Войти</title>
-    <link rel="stylesheet" href="./style5.css" />
+    <link rel="stylesheet" href="../style/style5.css" />
   </head>
   <body>
     <div class="wrapper">
