--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
   </head>
   <body>
     <div class="wrapper">
