--- a/html/index4.html
+++ b/html/index4.html
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Подборка</title>
-    <link rel="stylesheet" href="./style4.css">
+    <link rel="stylesheet" href="../style/style4.css">
 </head>
 <body>
     <div class="wrapper">
