--- a/html/index3.html
+++ b/html/index3.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Истории</title>
+    <title>Stories</title>
     <link rel="stylesheet" href="../style/style3.css" />
   </head>
   <body>
@@ -19,109 +19,93 @@
         <head>
           <div class="head">
             <div class="menu">
-              <div><a href="./index.html">Главная</a></div>
-              <div><a href="./index4.html">Подборка</a></div>
-              <div><a href="./index5.html">Войти</a></div>
+              <div><a href="./index.html">Main</a></div>
+              <div><a href="./index4.html">Collection</a></div>
+              <div><a href="./index5.html">Login in</a></div>
             </div>
           </div>
         </head>
         <section>
           <div class="section">
-            <div class="header">Истории</div>
+            <div class="header">Stories</div>
             <div class="header_ps">
-              Советы, истории и репортажи от первого лица
+              Tips, stories and reports from the first person
             </div>
             <div class="section_block">
-              <div class="header">text</div>
-              <div class="picture"></div>
-              <div class="text">
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum."
+              <div class="header">
+                Exploring the Wonder and Diversity of India's Culture: A Guide
+                to Traveling in India.
               </div>
-              <div class="btn">Далее</div>
-            </div>
-          </div>
-          <div class="section">
-            <div class="section_block">
-              <div class="header">text</div>
-              <div class="picture"></div>
+              <div class="picture India"></div>
               <div class="text">
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum."
+                Traveling in India can be both a wonderful and fascinating
+                experience. The country is filled with rich culture, stunning
+                architecture, and incredible tourist destinations. Some of the
+                must-see sites include the Taj Mahal in Agra, the Golden Temple
+                in Amritsar, the Delhi Red Fort, and the Udaipur Palace. India
+                is also home to a diverse range of cuisines including vegetarian
+                curries, flavorful street food, and delectable sweets. One of
+                the best ways to truly immerse yourself in India's culture is by
+                traveling overland by train, buses, or even auto rickshaws.
               </div>
-              <div class="btn">Далее</div>
+              <div class="btn"><a href="./index6.html">more</a></div>
             </div>
           </div>
           <div class="section">
             <div class="section_block">
-              <div class="header">text</div>
-              <div class="picture"></div>
-              <div class="text">
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum."
+              <div class="header">
+                Discover the Magic and Mystery of Japan: A Complete Guide to
+                Traveling in the Land of the Rising Sun.
               </div>
-              <div class="btn">Далее</div>
+              <div class="picture Japan"></div>
+              <div class="text">
+                Whether you're looking for bustling cityscapes, peaceful rural
+                villages, or majestic natural wonders, Japan should be on your
+                travel bucket list. From Tokyo and Kyoto to Mount Fuji and
+                Okinawa, Japan is a destination full of rich culture and
+                stunning natural beauty. From historic temples to futuristic
+                high-rise buildings, from bustling street markets to zen
+                gardens, Japan is a place of endless exploration. Whether you're
+                planning a solo trip or taking your family along, Japan has
+                something for everyone.
+              </div>
+              <div class="btn"><a href="./index7.html">more</a></div>
+            </div>
+          </div>
+          <div class="section">
+            <div class="section_block">
+              <div class="header">
+                Unveiling the Charm of Australia: A Complete Guide to Traveling
+                Down Under.
+              </div>
+              <div class="picture Australia"></div>
+              <div class="text">
+                Whether visiting the iconic beaches of Bondi and Gold Coast,
+                encountering wildlife around the Great Barrier Reef, or touring
+                the breathtaking landscapes of the Blue Mountains, Australia has
+                something for everyone. A trip Down Under is the perfect
+                destination to uncover a captivating blend of vibrant cities,
+                ancient culture, and stunning natural wonders. Whether hiking
+                the trails of Tasmania, visiting the bustling urban centers of
+                Melbourne and Sydney, or diving into the Great Barrier Reef,
+                Australia is a destination bound to dazzle.
+              </div>
+              <div class="btn"><a href="./index8.html">more</a></div>
             </div>
           </div>
         </section>
-        <footer>
+      </div>
+      <footer>
+        <div class="footer">
           <div class="color g">
             <div class="footer_block">
-              <div class="text_footer">Есть о чем рассказать?</div>
+              <div class="text_footer">Is there anything to tell?</div>
               <div class="text_footer_ps">
-                Напишите на нашу почту blog@poedem.ru
+                Write to our mail blog@poedem.com
               </div>
             </div>
           </div>
           <div class="color b">
-            <div class="footer_label">
-              <div>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="56"
-                  height="64"
-                  viewBox="0 0 56 64"
-                  fill="none"
-                >
-                  <path
-                    d="M5.7915 29.177L29.6008 37.1329V42.4368V45.4203H29.279L28.6355 47.7407L5.7915 29.177Z"
-                    fill="#F5800D"
-                  />
-                  <path
-                    d="M5.7915 29.177L29.6008 37.1329V42.4368V45.4203H29.279L28.6355 47.7407L5.7915 29.177Z"
-                    fill="#F5800D"
-                  />
-                  <path
-                    d="M53.41 28.8455L29.279 36.8013L28.6355 47.7407L53.41 28.8455Z"
-                    fill="#047E79"
-                  />
-                  <path
-                    d="M53.41 28.8455L29.279 36.8013L28.6355 47.7407L53.41 28.8455Z"
-                    fill="#047E79"
-                  />
-                  <path
-                    d="M5.95621 29.0705L29.488 28.947L53.0198 28.8235M5.95621 29.0705L28.4467 47.9257M5.95621 29.0705L29.0431 37.0557M53.0198 28.8235L28.4467 47.9257M53.0198 28.8235L29.0431 37.0557M53.0198 28.8235L15.4652 29.0206L3.28834 1.00013L4.19468 61.1743C7.03607 61.0741 39.6876 60.5624 52.8521 61.4398L28.4467 47.9257M28.4467 47.9257L29.0431 37.0557"
-                    stroke="black"
-                  />
-                </svg>
-              </div>
-              <div>bSBDN</div>
-            </div>
             <div class="icons">
               <div class="icon">
                 <svg
@@ -231,9 +215,8 @@
               </div>
             </div>
           </div>
-        </footer>
-      </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
-l
