--- a/html/index5.html
+++ b/html/index5.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -22,7 +20,7 @@
           <div class="head">
             <div class="menu">
               <div><a href="./index.html">Главная</a></div>
-              <div><a href="./index3.html">Истории</a></div>
+              <div><a href="./index3.html">Stories</a></div>
               <div><a href="./index4.html">Подборка</a></div>
             </div>
           </div>
