--- a/html/index6.html
+++ b/html/index6.html
@@ -9,8 +9,19 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Главная</title>
-    <link rel="stylesheet" href="../style/style.css" />
+    <title>Подборка</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+      integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+      integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="../style/style4.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -18,109 +29,70 @@
       <div class="main">
         <head>
           <div class="head">
-            <div class="logo_head">
-              <div class="logo">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="56"
-                  height="64"
-                  viewBox="0 0 56 64"
-                  fill="none"
-                >
-                  <path
-                    d="M5.79144 29.1771L29.6007 37.1329V42.4369V45.4203H29.279L28.6355 47.7408L5.79144 29.1771Z"
-                    fill="#F5800D"
-                  />
-                  <path
-                    d="M5.79144 29.1771L29.6007 37.1329V42.4369V45.4203H29.279L28.6355 47.7408L5.79144 29.1771Z"
-                    fill="#F5800D"
-                  />
-                  <path
-                    d="M53.41 28.8456L29.279 36.8015L28.6355 47.7408L53.41 28.8456Z"
-                    fill="#047E79"
-                  />
-                  <path
-                    d="M53.41 28.8456L29.279 36.8015L28.6355 47.7408L53.41 28.8456Z"
-                    fill="#047E79"
-                  />
-                  <path
-                    d="M5.95621 29.0704L29.488 28.9469L53.0198 28.8234M5.95621 29.0704L28.4467 47.9256M5.95621 29.0704L29.0431 37.0555M53.0198 28.8234L28.4467 47.9256M53.0198 28.8234L29.0431 37.0555M53.0198 28.8234L15.4652 29.0204L3.28834 1.00001L4.19468 61.1741C7.03607 61.074 39.6876 60.5622 52.8521 61.4397L28.4467 47.9256M28.4467 47.9256L29.0431 37.0555"
-                    stroke="black"
-                  />
-                </svg>
-              </div>
-              <div class="logo_name">Название</div>
-            </div>
             <div class="menu">
+              <div><a href="./index.html">Главная</a></div>
               <div><a href="./index3.html">Stories</a></div>
-              <div><a href="./index4.html">Подборка</a></div>
               <div><a href="./index5.html">Войти</a></div>
             </div>
           </div>
         </head>
         <section>
-          <div class="section">
-            <div class="picture">
-              <div class="bg">
-                <div>Заголовок статьи</div>
-                <div>
-                  Читать больше
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="30"
-                    height="30"
-                    viewBox="0 0 30 30"
-                    fill="none"
-                  >
-                    <path
-                      d="M15.4067 7.02289C15.0161 6.63236 14.383 6.63236 13.9924 7.02289L13.6392 7.37618C13.2486 7.7667 13.2486 8.39987 13.6392 8.79039L16.5912 11.7424C17.2212 12.3724 16.775 13.4495 15.8841 13.4495L7.31579 13.4495C6.76351 13.4495 6.3158 13.8972 6.3158 14.4495L6.3158 14.9495C6.3158 15.5018 6.76351 15.9495 7.3158 15.9495L15.8841 15.9495C16.775 15.9495 17.2212 17.0267 16.5912 17.6566L13.6392 20.6087C13.2486 20.9992 13.2486 21.6324 13.6392 22.0229L13.9924 22.3762C14.383 22.7667 15.0161 22.7667 15.4067 22.3762L22.3762 15.4066C22.7667 15.0161 22.7667 14.3829 22.3762 13.9924L15.4067 7.02289Z"
-                      fill="white"
+          <div class="section"></div>
+
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12">
+                <h2 class="text-center">Comment</h2>
+              </div>
+              <div class="col-lg-6">
+                <div id="comment-field"></div>
+              </div>
+              <div class="col-lg-6">
+                <form>
+                  <div class="form-group">
+                    <label for="comment-name">Name:</label>
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="comment-name"
+                      placeholder="Enter your name"
                     />
-                  </svg>
-                </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="comment-body">Comment:</label>
+                    <textarea
+                      type="password"
+                      class="form-control"
+                      id="comment-body"
+                      placeholder="comment"
+                    ></textarea>
+                  </div>
+                  <div class="form-group form-check text-right">
+                    <button
+                      type="submit"
+                      id="comment-add"
+                      class="btn btn-primary"
+                    >
+                      add Comment
+                    </button>
+                  </div>
+                </form>
               </div>
             </div>
-            <div class="section_items">
-              <div>Все статьи</div>
-              <div class="section_items_row">
-                <div class="block">
-                  <a href="./index6.html">
-                    <div class="block_pic"></div>
-                  </a>
-                  <div class="block_name">10.20.2032 Name</div>
-                  <div class="block_text">
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore
-                    eu fugiat nulla pariatur. Excepteur sint
-                  </div>
-                </div>
-                <div class="block">
-                  <div class="block_pic block1_pic"></div>
-                  <div class="block_name block1_name">10.20.2032 Name</div>
-                  <div class="block_text block1_text">
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore
-                    eu fugiat nulla pariatur. Excepteur sint
-                  </div>
-                </div>
-                <div class="block">
-                  <div class="block_pic"></div>
-                  <div class="block_name">10.20.2032 Name</div>
-                  <div class="block_text">
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore
-                    eu fugiat nulla pariatur. Excepteur sint
-                  </div>
-                </div>
-              </div>
-            </div>
+
           </div>
+
+          <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"
+          ></script>
+          <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+            integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+            crossorigin="anonymous"
+          ></script>
+          <script src="../js/scriptjs.js"></script>
         </section>
         <footer>
           <div class="color g">
