--- a/html/index6.html
+++ b/html/index6.html
@@ -30,7 +30,7 @@
         <head>
           <div class="head">
             <div class="menu">
-              <div><a href="./index.html">Главная</a></div>
+              <div><a href="../php/indexMain.php">Главная</a></div>
               <div><a href="./index3.html">Stories</a></div>
               <div><a href="./index5.html">Войти</a></div>
             </div>
@@ -79,20 +79,7 @@
                 </form>
               </div>
             </div>
-
           </div>
-
-          <script
-            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"
-          ></script>
-          <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
-            integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-            crossorigin="anonymous"
-          ></script>
-          <script src="../js/scriptjs.js"></script>
         </section>
       </div>
       <footer>
@@ -228,5 +215,16 @@
         </div>
       </footer>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+      integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../js/scriptjsComments.js"></script>
   </body>
 </html>
