--- a/html/index4.html
+++ b/html/index4.html
@@ -19,7 +19,7 @@
         <head>
           <div class="head">
             <div class="menu">
-              <div><a href="./index.html">Главная</a></div>
+              <div><a href="../php/indexMain.php">Главная</a></div>
               <div><a href="./index3.html">Stories</a></div>
               <div><a href="./index5.html">Войти</a></div>
             </div>
