--- a/html/index4.html
+++ b/html/index4.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Подборка</title>
+    <title>Collection</title>
     <link rel="stylesheet" href="../style/style4.css" />
   </head>
   <body>
@@ -19,9 +19,9 @@
         <head>
           <div class="head">
             <div class="menu">
-              <div><a href="../php/indexMain.php">Главная</a></div>
+              <div><a href="./index.html">Main</a></div>
               <div><a href="./index3.html">Stories</a></div>
-              <div><a href="./index5.html">Войти</a></div>
+              <div><a href="./index5.html">Login in</a></div>
             </div>
           </div>
         </head>
