--- a/html/index5.html
+++ b/html/index5.html
@@ -19,9 +19,9 @@
         <head>
           <div class="head">
             <div class="menu">
-              <div><a href="../php/indexMain.php">Главная</a></div>
+              <div><a href="./index.html">Main</a></div>
               <div><a href="./index3.html">Stories</a></div>
-              <div><a href="./index4.html">Подборка</a></div>
+              <div><a href="./index4.html">Collection</a></div>
             </div>
           </div>
         </head>
