--- a/html/index3.html
+++ b/html/index3.html
@@ -19,7 +19,7 @@
         <head>
           <div class="head">
             <div class="menu">
-              <div><a href="../php/indexMain.php">Main</a></div>
+              <div><a href="./index.html">Main</a></div>
               <div><a href="./index4.html">Collection</a></div>
               <div><a href="./index5.html">Login in</a></div>
             </div>
