--- a/html/index6.html
+++ b/html/index6.html
@@ -30,9 +30,9 @@
         <head>
           <div class="head">
             <div class="menu">
-              <div><a href="../php/indexMain.php">Главная</a></div>
+              <div><a href="./index.html">Main</a></div>
               <div><a href="./index3.html">Stories</a></div>
-              <div><a href="./index5.html">Войти</a></div>
+              <div><a href="./index5.html">Login in</a></div>
             </div>
           </div>
         </head>
