--- a/html/index.html
+++ b/html/index.html
@@ -9,12 +9,12 @@
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <title>Main</title>
   <link rel="stylesheet" href="../style/style.css" />
-  <link rel="stylesheet" href="../style/styleSorting.css" />
 </head>
 
 <body>
   <div class="wrapper">
     <div class="head_bg"></div>
+    <div class="picture"></div>
     <div class="main">
       <head>
         <div class="head">
@@ -32,7 +32,7 @@
                   stroke="black" />
               </svg>
             </div>
-            <div class="logo_name">Название</div>
+            <div class="logo_name">TrvlBlog</div>
           </div>
           <div class="menu">
             <div><a href="../html/index3.html">Stories</a></div>
@@ -43,17 +43,14 @@
       </head>
       <section>
         <div class="section">
-          <div class="picture">
-            <div class="bg">
-              <div>Заголовок статьи</div>
-              <div>
-                Читать больше
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
-                  <path
-                    d="M15.4067 7.02289C15.0161 6.63236 14.383 6.63236 13.9924 7.02289L13.6392 7.37618C13.2486 7.7667 13.2486 8.39987 13.6392 8.79039L16.5912 11.7424C17.2212 12.3724 16.775 13.4495 15.8841 13.4495L7.31579 13.4495C6.76351 13.4495 6.3158 13.8972 6.3158 14.4495L6.3158 14.9495C6.3158 15.5018 6.76351 15.9495 7.3158 15.9495L15.8841 15.9495C16.775 15.9495 17.2212 17.0267 16.5912 17.6566L13.6392 20.6087C13.2486 20.9992 13.2486 21.6324 13.6392 22.0229L13.9924 22.3762C14.383 22.7667 15.0161 22.7667 15.4067 22.3762L22.3762 15.4066C22.7667 15.0161 22.7667 14.3829 22.3762 13.9924L15.4067 7.02289Z"
-                    fill="white" />
-                </svg>
-              </div>
+          <div class="picture_bg">
+            <div class="text_bg">
+              tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco
+              laboris nisi ut aliquip ex ea commodo consequat. Duis
+              aute irure dolor in reprehenderit in voluptate velit
+              esse cillum dolore eu fugiat nulla pariatur. Excepteur
+              sint
             </div>
           </div>
           <div class="section_items">
@@ -128,11 +125,11 @@
                   </a>
                   <div class="work__cat block_name">24.04.2023 Name4</div>
                   <div class="block_text">
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint
+                    tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint
                   </div>
                 </div>
               </div>
@@ -145,11 +142,11 @@
                   </a>
                   <div class="work__cat block_name">17.03.2023 Name5</div>
                   <div class="block_text">
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint
+                    tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint
                   </div>
                 </div>
               </div>
@@ -162,11 +159,11 @@
                   </a>
                   <div class="work__cat block_name">01.03.2022 Name6</div>
                   <div class="block_text">
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint
+                    tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint
                   </div>
                 </div>
               </div>
@@ -181,11 +178,11 @@
                   </a>
                   <div class="work__cat block_name">03.01.2023 Name7</div>
                   <div class="block_text">
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint
+                    tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint
                   </div>
                 </div>
               </div>
@@ -198,11 +195,11 @@
                   </a>
                   <div class="work__cat block_name">11.06.2022 Name8</div>
                   <div class="block_text">
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint
+                    tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint
                   </div>
                 </div>
               </div>
@@ -215,11 +212,11 @@
                   </a>
                   <div class="work__cat block_name">30.10.2022 Name9</div>
                   <div class="block_text">
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint
+                    tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                    irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint
                   </div>
                 </div>
               </div>
