--- a/html/index4.html
+++ b/html/index4.html
@@ -10,6 +10,8 @@
       rel="stylesheet"
     />
     <title>Collection</title>
+    <link href="../style/itc-slider.css" rel="stylesheet">
+    
     <link rel="stylesheet" href="../style/style4.css" />
   </head>
   <body>
@@ -18,6 +20,21 @@
       <div class="main">
         <head>
           <div class="head">
+            <div class="burger-menu_hiden">
+              <input id="burger" type="checkbox" class="checkbox" />
+              <label for="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+              </label>
+              <nav>
+                <ul>
+                  <li><a href="../html/index3.html">Stories</a></li>
+                  <li><a href="../html/index4.html">Collection</a></li>
+                  <li><a href="../html/index5.html">Login in</a></li>
+                </ul>
+              </nav>
+            </div>
             <div class="menu">
               <div><a href="./index.html">Main</a></div>
               <div><a href="./index3.html">Stories</a></div>
@@ -26,7 +43,8 @@
           </div>
         </head>
         <section>
-          <div class="section"></div>
+          <div class="section">
+            
         </section>
       </div>
       <footer>
