--- a/html/index3.html
+++ b/html/index3.html
@@ -18,6 +18,21 @@
       <div class="main">
         <head>
           <div class="head">
+            <div class="burger-menu_hiden">
+              <input id="burger" type="checkbox" class="checkbox" />
+              <label for="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+              </label>
+              <nav>
+                <ul>
+                  <li><a href="../html/index3.html">Stories</a></li>
+                  <li><a href="../html/index4.html">Collection</a></li>
+                  <li><a href="../html/index5.html">Login in</a></li>
+                </ul>
+              </nav>
+            </div>
             <div class="menu">
               <div><a href="./index.html">Main</a></div>
               <div><a href="./index4.html">Collection</a></div>
